--- a/src/bipquantum_frontend/package.json
+++ b/src/bipquantum_frontend/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
+    "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
     "formik": "^2.4.6",
