--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "src/frontend"
   ],
   "dependencies": {
-    "@internet-identity-labs/react-ic-ii-auth": "^0.0.19"
+    "@internet-identity-labs/react-ic-ii-auth": "^0.0.19",
+    "@napi-rs/lzma": "^1.3.1",
+    "@napi-rs/lzma-linux-x64-gnu": "^1.3.1"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.3"
