Revert "Bring "ICP repository" front-end"

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -14,20 +14,27 @@
     "@dfinity/agent": "^0.15.7",
     "@dfinity/candid": "^0.15.7",
     "@dfinity/principal": "^0.15.7",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/joy": "^5.0.0-beta.36",
+    "@mui/material": "^5.15.15",
+    "@reduxjs/toolkit": "^2.2.3",
+    "formik": "^2.4.6",
+    "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-number-format": "^5.3.4",
-    "react-tailwind-select": "^1.1.0",
-    "react-tailwindcss-select": "^1.8.5",
-    "react-toastify": "^10.0.5"
+    "react-feather": "^2.0.10",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "6.4.4",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
-    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.10.2",
     "dotenv": "^16.3.1",
-    "postcss": "^8.4.38",
     "sass": "^1.63.6",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.1.3",
