--- a/package.json
+++ b/package.json
@@ -4,24 +4,42 @@
     "npm": ">=7.0.0"
   },
   "name": "bipquantum",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "npm run build --workspaces --if-present",
-    "prebuild": "npm run prebuild --workspaces --if-present",
-    "pretest": "npm run prebuild --workspaces --if-present",
-    "start": "npm start --workspaces --if-present",
-    "test": "npm test --workspaces --if-present",
+    "setup": "npm i && dfx canister create backend && dfx generate backend && dfx deploy",
+    "start": "vite --port 3000",
+    "prebuild": "dfx generate",
+    "build": "tsc && vite build",
+    "format": "prettier --write \"src/**/*.{json,js,jsx,ts,tsx,css,scss}\"",
     "tw:generate": " npx tailwindcss -i ./src/frontend/src/index.css -o ./src/frontend/src/output.css --watch"
   },
-  "type": "module",
-  "workspaces": [
-    "src/frontend"
-  ],
   "dependencies": {
-    "@internet-identity-labs/react-ic-ii-auth": "^0.0.19",
+    "@dfinity/agent": "^2.0.0",
+    "@dfinity/candid": "^2.0.0",
+    "@dfinity/principal": "^2.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-number-format": "^5.3.4",
+    "react-tailwind-select": "^1.1.0",
+    "react-tailwindcss-select": "^1.8.5",
+    "react-toastify": "^10.0.5",
     "@napi-rs/lzma": "^1.3.1",
     "@napi-rs/lzma-linux-x64-gnu": "^1.3.1"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "@dfinity/auth-client": "^2.0.0",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@vitejs/plugin-react": "^4.0.1",
+    "autoprefixer": "^10.4.19",
+    "dotenv": "^16.3.1",
+    "postcss": "^8.4.38",
+    "sass": "^1.63.6",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9",
+    "vite-plugin-environment": "^1.1.3"
   }
 }
