--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "tw:generate": " npx tailwindcss -i ./src/frontend/src/index.css -o ./src/frontend/src/output.css --watch"
   },
   "dependencies": {
-    "@dfinity/agent": "^2.0.0",
-    "@dfinity/candid": "^2.0.0",
-    "@dfinity/principal": "^2.0.0",
+    "@dfinity/agent": "^1.3",
+    "@dfinity/candid": "^1.3",
+    "@dfinity/principal": "^1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.3.4",
@@ -29,7 +29,8 @@
     "@napi-rs/lzma-linux-x64-gnu": "^1.3.1"
   },
   "devDependencies": {
-    "@dfinity/auth-client": "^2.0.0",
+    "@ic-reactor/react": "^1.8.2",
+    "@dfinity/auth-client": "^1.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
