--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "react-router-dom": "^6.26.1",
     "react-tailwind-select": "^1.1.0",
     "react-tailwindcss-select": "^1.8.5",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@dfinity/auth-client": "^1.3",
     "@ic-reactor/react": "^1.8.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.3.1",
