--- a/package.json
+++ b/package.json
@@ -25,22 +25,26 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.3.4",
+    "react-router-dom": "^6.26.1",
     "react-tailwind-select": "^1.1.0",
     "react-tailwindcss-select": "^1.8.5",
     "react-toastify": "^10.0.5",
-    "react-router-dom" : "^6.26.1"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@dfinity/auth-client": "^1.3",
     "@ic-reactor/react": "^1.8.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.19",
     "dotenv": "^16.3.1",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "sass": "^1.63.6",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-environment": "^1.1.3"
