--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@napi-rs/lzma-linux-x64-gnu": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-number-format": "^5.3.4",
     "react-router-dom": "^6.26.1",
     "react-tailwind-select": "^1.1.0",
