--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@napi-rs/lzma": "^1.3.1",
     "@napi-rs/lzma-linux-x64-gnu": "^1.3.1",
     "@xstate/react": "^4.1.3",
+    "pdf-lib": "^1.17.1",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
