--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@dfinity/utils": "^2.5.0",
     "@napi-rs/lzma": "^1.3.1",
     "@napi-rs/lzma-linux-x64-gnu": "^1.3.1",
+    "@xstate/react": "^4.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
@@ -30,7 +31,8 @@
     "react-tailwind-select": "^1.1.0",
     "react-tailwindcss-select": "^1.8.5",
     "react-toastify": "^10.0.5",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "xstate": "^5.18.2"
   },
   "devDependencies": {
     "@dfinity/auth-client": "^2.1.1",
