--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "tw:generate": " npx tailwindcss -i ./src/frontend/src/index.css -o ./src/frontend/src/output.css --watch"
   },
   "dependencies": {
-    "@dfinity/agent": "^2.1.1",
-    "@dfinity/candid": "^2.1.1",
-    "@dfinity/principal": "^2.1.1",
-    "@dfinity/utils": "^2.5.0",
-    "@napi-rs/lzma": "^1.3.1",
-    "@napi-rs/lzma-linux-x64-gnu": "^1.3.1",
-    "@xstate/react": "^4.1.3",
+    "@dfinity/agent": "^2.2.0",
+    "@dfinity/candid": "^2.2.0",
+    "@dfinity/identity": "^2.2.0",
+    "@dfinity/ledger-icp": "^2.6.7",
+    "@dfinity/principal": "^2.2.0",
+    "@dfinity/utils": "^2.9.0",
+    "@napi-rs/lzma": "^1.4.1",
+    "@napi-rs/lzma-linux-x64-gnu": "^1.4.1",
+    "@nfid/identitykit": "^1.0.7",
+    "@xstate/react": "^5.0.2",
     "country-list": "^2.3.0",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
@@ -30,32 +33,32 @@
     "react-country-dropdown": "^3.0.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-hook": "^5.0.1",
-    "react-markdown": "^9.0.1",
-    "react-number-format": "^5.3.4",
-    "react-router-dom": "^6.26.1",
+    "react-markdown": "^9.0.3",
+    "react-number-format": "^5.4.3",
+    "react-router-dom": "^7.1.3",
     "react-tailwind-select": "^1.1.0",
     "react-tailwindcss-select": "^1.8.5",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^11.0.3",
     "remark-gfm": "^4.0.0",
-    "uuid": "^10.0.0",
-    "xstate": "^5.18.2"
+    "uuid": "^11.0.5",
+    "xstate": "^5.19.2"
   },
   "devDependencies": {
-    "@dfinity/auth-client": "^2.1.1",
-    "@ic-reactor/react": "^1.9.1",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@dfinity/auth-client": "^2.2.0",
+    "@ic-reactor/react": "^1.16.0",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "@types/uuid": "^10.0.0",
-    "@vitejs/plugin-react": "^4.0.1",
-    "autoprefixer": "^10.4.19",
-    "dotenv": "^16.3.1",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "sass": "^1.63.6",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.7",
+    "postcss": "^8.5.1",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.10",
+    "sass": "^1.83.4",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11",
     "vite-plugin-environment": "^1.1.3"
   }
 }
