--- a/src/frontend/public/.ic-assets.json5
+++ b/src/frontend/public/.ic-assets.json5
@@ -53,4 +53,8 @@
         // Uncomment to redirect all requests from .raw.icp0.io to .icp0.io
         // "allow_raw_access": false
     },
+    {
+        "match": ".well-known",
+        "ignore": false
+    }
 ]
