--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@napi-rs/lzma": "^1.3.1",
     "@napi-rs/lzma-linux-x64-gnu": "^1.3.1",
     "@xstate/react": "^4.1.3",
+    "browser-image-compression": "^2.0.2",
     "country-list": "^2.3.0",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
