--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@dfinity/utils": "^2.5.0",
     "@napi-rs/lzma": "^1.3.1",
     "@napi-rs/lzma-linux-x64-gnu": "^1.3.1",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@xstate/react": "^4.1.3",
     "browser-image-compression": "^2.0.2",
     "country-list": "^2.3.0",
+    "grapheme-splitter": "^1.0.4",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
@@ -48,6 +50,7 @@
   "devDependencies": {
     "@dfinity/auth-client": "^2.1.1",
     "@ic-reactor/react": "^1.9.1",
+    "@types/node": "^24.0.10",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/uuid": "^10.0.0",
