--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "browser-image-compression": "^2.0.2",
     "country-list": "^2.3.0",
     "grapheme-splitter": "^1.0.4",
+    "minisearch": "^7.1.2",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
@@ -36,6 +37,7 @@
     "react-icons": "^5.5.0",
     "react-infinite-scroll-hook": "^5.0.1",
     "react-markdown": "^9.0.1",
+    "react-minisearch": "^7.1.3",
     "react-number-format": "^5.3.4",
     "react-router-dom": "^6.26.1",
     "react-select": "^5.10.0",
