--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "tw:generate": " npx tailwindcss -i ./src/frontend/src/index.css -o ./src/frontend/src/output.css --watch"
   },
   "dependencies": {
-    "@dfinity/agent": "^2.1.1",
-    "@dfinity/candid": "^2.1.1",
-    "@dfinity/principal": "^2.1.1",
-    "@dfinity/utils": "^2.5.0",
+    "@dfinity/agent": "^2.4.1",
+    "@dfinity/candid": "^2.4.1",
+    "@dfinity/principal": "^2.4.1",
+    "@dfinity/utils": "^2.13.2",
     "@napi-rs/lzma": "^1.3.1",
     "@napi-rs/lzma-linux-x64-gnu": "^1.3.1",
+    "@nfid/identitykit": "^1.0.14",
     "@pdf-lib/fontkit": "^1.1.1",
     "@xstate/react": "^4.1.3",
     "browser-image-compression": "^2.0.2",
@@ -49,8 +50,7 @@
     "xstate": "^5.18.2"
   },
   "devDependencies": {
-    "@dfinity/auth-client": "^2.1.1",
-    "@ic-reactor/react": "^1.9.1",
+    "@dfinity/auth-client": "^2.4.1",
     "@types/node": "^24.0.10",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
