--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "@napi-rs/lzma-linux-x64-gnu": "^1.3.1",
     "@nfid/identitykit": "^1.0.14",
     "@pdf-lib/fontkit": "^1.1.1",
+    "@types/country-list": "^2.1.4",
     "@xstate/react": "^4.1.3",
     "browser-image-compression": "^2.0.2",
-    "country-list": "^2.3.0",
+    "country-list": "^2.4.1",
     "grapheme-splitter": "^1.0.4",
     "minisearch": "^7.1.2",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
-    "react-country-dropdown": "^3.0.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
