--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@napi-rs/lzma-linux-x64-gnu": "^1.3.1",
     "@nfid/identitykit": "^1.0.15",
     "@pdf-lib/fontkit": "^1.1.1",
+    "@stripe/react-stripe-js": "^5.3.0",
+    "@stripe/stripe-js": "^8.5.1",
     "@types/country-list": "^2.1.4",
     "@xstate/react": "^4.1.3",
     "bignumber.js": "^9.1.2",
